@@ -3,7 +3,7 @@
 @import 'src/styles';
 
 .omv-dashboard-widget-filesystems-status {
-  padding: $omv-padding;
+  margin: 0 $omv-padding $omv-padding;
 
   .item {
     border-left: 3px solid;
