@@ -1,7 +1,7 @@
 @import 'src/styles';
 
 .omv-dashboard-widget-system-information {
-  padding: $omv-padding;
+  margin: 0 $omv-padding $omv-padding;
 
   .omv-grid-cell {
     .omv-grid-cell-title {
