@@ -1,0 +1,6 @@
+@import 'src/styles';
+
+.omv-dashboard-widget-text {
+  margin: 0 $omv-padding $omv-padding;
+  max-height: 300px;
+}
